# girder-imrt

./: .README  .gitignore  README.md  journal.md
girder-deploy/: Dockerfile.base  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
girder-deploy/girder_en_arriere/: Dockerfile.txt  entrypoint.sh
girder-deploy/girder_en_avant/: Dockerfile.txt  entrypoint.sh
girder-deploy/scripts/: apply-template.sh  build-all.sh  build-calcule.sh  build-en-avant.sh  init_girder.py  start.sh
src/plugins_front/imrt_downstream/: pyproject.toml
src/plugins_front/imrt_downstream/imrt_downstream/: README.rst  __init__.py  settings.example.json
src/plugins_front/imrt_downstream/imrt_downstream/templates/: canceled_template.txt  error_template.txt  success_template.txt
src/plugins_front/imrt_frontend_helpers/: README.md  imrtApi.js
src/plugins_front/imrt_plugin/: README.rst  pyproject.toml
src/plugins_front/imrt_plugin/imrt_plugin/: __init__.py  constants.py  rest.py
src/plugins_front/imrt_plugin/imrt_plugin/web_client/: main.js  package.json
src/plugins_worker/imrt_worker/: pyproject.toml
src/plugins_worker/imrt_worker/imrt_worker/: tasks.py
src/projects/opla/stylesheets/: frontPage.styl  globalNav.styl  header.styl
src/projects/opla/views/: frontPageView.js
src/projects/smart_it/stylesheets/: frontPage.styl  globalNav.styl  header.styl
src/projects/smart_it/utilities/: translations.js
src/projects/smart_it/views/: frontPageView.js
src/projects/smartheat/stylesheets/: frontPage.styl  globalNav.styl  header.styl
(+6 files in other folders)
